# discordpyminigamesbot

./: .env.example  .gitignore  LICENSE  README.md  cricsim3.py  minibeta.py  minigames.py  pyproject.toml  requirements.txt  words  words.py
.github/workflows/: ci.yml  deploy.yml
bot/: __init__.py  __main__.py
bot/clients/: http.py
bot/cogs/: admin.py  blackjack.py  connect4.py  cricket.py  dino.py  duel.py  economy.py  eight_ball.py  emojiguess.py  fight.py  flagle.py  gambling.py  guessnumber.py  help.py  mathematics.py  race.py  riddle.py  rps.py  tictactoe.py  topgg.py  truthordare.py  unscramble.py  utility.py  wordguess.py
bot/core/: bot.py  checks.py  config.py  embeds.py  emojis.py  errors.py  logging.py  utils.py
bot/data/: __init__.py  countries.json  cricket_names.json  dare.json  eight_ball.json  emoji_puzzles.json  riddles.json  truth.json  words.json
bot/games/: achievements.py  blackjack.py  connect4.py  cricket.py  duel.py  gambling.py  riddle.py  rps.py  tictactoe.py  wordguess.py
bot/services/: blocklist.py  channel_lock.py  duel.py  economy.py  scores.py
bot/views/: blackjack.py  confirm.py  connect4.py  duel.py  fight.py  rps.py  tictactoe.py  truthordare.py
docs/: AUDIT.md  GITHUB_WORKFLOW.md  GROWTH_PLAN.md  RATE_LIMITS.md  REFACTOR_PLAN.md
scripts/: check_db.py
tests/: test_blocklist.py  test_cricket.py  test_duel.py  test_economy.py  test_gambling.py  test_games.py  test_phase0.py  test_riddle.py  test_tictactoe.py  test_unscramble.py  test_wordguess.py
