[project]
name = "minigames-bot"
version = "1.0.0"
description = "A multiplayer mini-games Discord bot built with discord.py."
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.4.0",
    "aiohttp>=3.10.0",
    "tabulate>=0.9.0",
    "topggpy>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]  # make the repo root importable so `import bot` works under bare `pytest`

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scripts"]  # one-off maintenance utilities

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # long lines are fine for embeds / data-heavy strings
